[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameTimer.gd" type="Script" id=1]
[ext_resource path="res://BebasNeue.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=8]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=9]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=10]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameTimer" type="Timer"]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = false
script = ExtResource( 1 )
countdown_duration = 5
countdown_hint = "Press to join"

[node name="RoundLabel" type="Label" parent="."]

visible = false
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -35.0
margin_right = 34.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
text = "3:00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="CountdownLabel" type="Label" parent="."]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -213.0
margin_top = -62.0
margin_right = 212.0
margin_bottom = 181.0
rect_rotation = -0.136255
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 9 )
text = "5
Press to Join"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "custom_fonts" ]

[node name="ControlHint" type="Label" parent="CountdownLabel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -15.0
margin_top = 232.0
margin_right = 442.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 10 )
text = "Space|Enter|USB 3|PS X|Xbox A|Nintendo B"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="timeout" from="." to="." method="_on_timeout"]


